Placed errorImage into src folder for import behavior @ build, fixed behavior on empty/whitespace descriptions in article forms, added CharaNav logo icon

--- a/src/components/imageReciever/imageReciever.css
+++ b/src/components/imageReciever/imageReciever.css
@@ -37,6 +37,10 @@
     border-radius: 5px;
 }
 
+.wrap img{
+    user-select: none;
+}
+
 .wrap:hover .hover{
     cursor: pointer;
     filter: brightness(140%) grayscale(70%);
